rclone wn volume

--- a/stable/htcondor/templates/htc-wn-configmap.yaml
+++ b/stable/htcondor/templates/htc-wn-configmap.yaml
@@ -13,3 +13,14 @@ data:
 {{- end }}
 
 {{- end }}
+
+---
+
+{{- if .Values.htcWn.rclone.enabled }}
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: rclone
+data:
+  rclone.conf: {{ .Values.htcWn.rclone.config }}
+{{- end }}
