fix typo in configmap

--- a/stable/htcondor/templates/htc-schedd-configmap.yaml
+++ b/stable/htcondor/templates/htc-schedd-configmap.yaml
@@ -4,4 +4,4 @@ metadata:
   name: scheddconfigd 
 data:
     01_DODAS_Custom: |
-{{ .Values.htcSchedd.config | indent 4 }
+{{ .Values.htcSchedd.config | indent 4 }}
