--- a/stable/htcondor/templates/htc-wn-pv.yaml
+++ b/stable/htcondor/templates/htc-wn-pv.yaml
@@ -3,6 +3,6 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: "{{ .Values.htcWn.persistentVolume.pv.name }}"
-spec: |
+spec:
 {{ .Values.htcWn.persistentVolume.pv.spec | indent 2 }}
 {{- end }}
