--- a/stable/jupyterhub/values.yaml
+++ b/stable/jupyterhub/values.yaml
@@ -8,7 +8,7 @@ iam:
 hub:
     host: localhost
     port: 30888
-    image: dciangot/hub:testnew14
+    image: dodasts/jupyter-hub:v3.0.0
 
 s3:
     enabled: false
