--- a/stable/jupyterhub/values.yaml
+++ b/stable/jupyterhub/values.yaml
@@ -11,4 +11,5 @@ hub:
     image: dodasts/jupyter-hub:v3.0.0
 
 s3:
-    enabled: false
+    endpoint: https://minio.cloud.infn.it/minio
+    bucket: mybucket
